# bioplib

./: .gitignore  00PART_DISTRIB_README  CMakeLists.txt  COPYING.DOC  HISTORY  LICENSE  README.md
data/: AllH.pgp  AllHPartial.pgp  Explicit.pgp  GC.mat  GRANTHAM  OldAllH.pgp  SG.mat  SS.mat  UP.mat  USER.DB  argos.hpb  chi  chilink  chothia.hpb  consensus.hpb  consensus.mat  coor  heijne.hpb  id.mat  janin.hpb  kyte.hpb  matrices.txt  mdm78  mdm78.mat  pam250.mat  pet91.mat  res  tanford.hpb  topmat.mat  vdwradii  wolfenden.hpb
doc/: HISTORY  bioplib_licence.tex
doc/adddoxy/: adddoxy.conf  adddoxy.pl
doc/adddoxy/extras/: page_02.dox  page_04.dox  page_05.dox  page_06.dox  page_07.dox
doc/doxygen/: Doxyfile
doc/doxygen/docsrc/: mainpage.dox  page_01.dox  page_02.dox  page_04.dox  page_05.dox  page_06.dox  page_07.dox  page_08.dox
doc/doxygen/docsrcinput/: 00README.txt  mainpage.dox  page_01.dox  page_02.dox  page_03.dox
pdbtagvars/: Makefile  README.md  main.c  pdbtagvars.c  pdbtagvars.h
profit/: Makefile  NWAlign.c  NWAlign.p  ProFit.h  fitting.c  fitting.p  main.c  main.p  protos.h  todo.c  todo.p
src/: 00bioplib.c  AddNTerHs.c  ApMatPDB.c  AppendPDB.c  AtomNameMatch.c  BuffInp.c  BuffInp.h  BuildAtomNeighbourPDBList.c  BuildConect.c  CalcCellTrans.c  CalcChiPDB.c  CalcCterCoords.c  CalcExtSD.c  CalcRMSPDB.c  CalcSD.c  CalcTetraHCoords.c  CheckExtn.c  CopyPDB.c  CopyPDBCoords.c  CreateRotMat.c  CrossProd3.c  DNAtoAA.c  DistPtLine.c  DistPtVect.c  DupePDB.c  DupeResiduePDB.c  ErrStack.c  ErrStack.h  ExtractZonePDB.c  FNam2PDB.c  FindAtomInRes.c  FindAtomWildcardInRes.c  FindHetatmResidue.c  FindHetatmResidueSpec.c  FindNextChainPDB.c  FindNextResidue.c  FindRawAtomInRes.c  FindResidue.c  FindResidueSpec.c  FindZonePDB.c  (+171 more)
src/TEST/: Makefile  README
src/TEST/REMARK350/: test_rem350_2.txt  test_rem350_3.txt  test_rem350_4.txt
src/TEST/data/header_suite/: test_alanine_in_01.xml  test_alanine_in_02.xml  test_alanine_out_01.xml  test_alanine_out_02.xml  test_alanine_out_03.xml  test_modres_out_01.xml  test_seqres_in_01.xml
src/TEST/data/readpdbml_suite/: test_alpha_carbon_alt_02.xml  test_alpha_carbon_format.xml  test_alpha_carbon_resnum_01.xml  test_alpha_carbon_resnum_02.xml  test_chloride.xml  test_heme_iron.xml  test_zinc.xml
src/TEST/data/wholepdb_suite/: test_alanine_out.xml  test_alanine_out_02.xml
src/TEST/data/writepdbml_suite/: test_H_1ZK.xml  test_H_dna.xml  test_H_leu_gamma.xml  test_alpha_carbon_alt.xml  test_alpha_carbon_element.xml  test_chloride.xml
src/TEST/src/: conect_suite.c  conect_suite.h  findzone_suite.c  findzone_suite.h  getpdbchainlabels_suite.c  getpdbchainlabels_suite.h  header_suite.c  header_suite.h  inpdbzone_suite.c  inpdbzone_suite.h  main.c  parseresspec_suite.c  parseresspec_suite.h  readpdbml_suite.c  readpdbml_suite.h  wholepdb_suite.c  wholepdb_suite.h  writepdbml_suite.c  writepdbml_suite.h
src/t/: pdb1yqv_0P.faa
test/: CMakeLists.txt
test/REMARK350/: test_rem350_1.txt  test_rem350_5.txt
test/data/conect_suite/: test_alanine_conect_in.xml  test_alanine_in.xml  test_alanine_out.xml
test/data/header_suite/: test_alanine_in_01.xml  test_alanine_in_03.xml  test_alanine_out_01.xml  test_modres_in_01.xml  test_seqres_out_01.xml
test/data/readpdbml_suite/: test_alpha_carbon.xml  test_alpha_carbon_alt_01.xml  test_alpha_carbon_alt_03.xml  test_alpha_carbon_resnum_03.xml  test_alpha_carbon_resnum_04.xml
test/data/writepdbml_suite/: test_H_Hg.xml  test_H_leu_beta.xml  test_H_leu_delta.xml  test_alpha_carbon_insert.xml  test_alpha_carbon_mlchain.xml
test/src/: conect_suite.c  conect_suite.h  findzone_suite.c  findzone_suite.h  getpdbchainlabels_suite.h  header_suite.c  header_suite.h  inpdbzone_suite.h  parseresspec_suite.h  readpdbml_suite.c  readpdbml_suite.h  wholepdb_suite.c  wholepdb_suite.h  writepdbml_suite.c  writepdbml_suite.h
test/tmp/: README
tools/: addhet.c  as2bval.c  atomcount.c  atomsel.c  avbr.c  chainpdb.c  countpdb.c  dummystrip.c  findresrange.c  fixchaininsert.c  flip.c  getpdb.c  hetstrip.c  hstrip.c  makepatch.c  nullstrip.c  numpdb.c  pdb2ms.c  pdb2pir.c  pdb2xyz.c  pdbcter.c  pdbhadd.c  pdborder.c  pdborigin.c  pdbsphere.c  renumpdb.c  rmspdb.c  rotate.c  solv.c  sumbval.c  torsions.c  transpdb.c
